@@ -9,8 +9,8 @@
  * @license             This Nutritionix jQuery Nutrition Label is dual licensed under the MIT and GPL licenses.   |
  * @link                http://www.nutritionix.com                                                                 |
  * @github              http://github.com/nutritionix/nutrition-label                                              |
- * @current version     5.0.0                                                                                      |
- * @stable version      4.0.7                                                                                      |
+ * @current version     4.0.10                                                                                     |
+ * @stable version      4.0.10                                                                                     |
  * @supported browser   Firefox, Chrome, IE8+                                                                      |
  *                                                                                                                 |
  ******************************************************************************************************************+
@@ -183,6 +183,13 @@
 		//to show the calorie diet info at the bottom of the label
 		showCalorieDiet : false,
 
+		//to show the disclaimer text or not
+		showDisclaimer : false,
+		//the height in px of the disclaimer div
+		scrollDisclaimerHeightComparison : 100,
+		scrollDisclaimer : 95,
+		valueDisclaimer : 'Please note that these nutrition values are estimated based on our standard serving portions.  As food servings may have a slight variance each time you visit, please expect these values to be with in 10% +/- of your actual meal.  If you have any questions about our nutrition calculator, please contact Nutritionix.',		ingredientLabel : 'INGREDIENTS:',
+
 		//the are to set some values as 'not applicable'. this means that the nutrition label will appear but the value will be a 'gray dash'
 		naCalories : false,
 		naFatCalories : false,
@@ -281,7 +288,6 @@
 		textVitaminC : 'Vitamin C',
 		textCalcium : 'Calcium',
 		textIron : 'Iron',
-		ingredientLabel : 'INGREDIENTS:',
 		ingredientList : 'None',
 		textPercentDailyPart1 : 'Percent Daily Values are based on a',
 		textPercentDailyPart2 : 'calorie diet'
@@ -379,6 +385,9 @@
 		if ($settings.showIngredients && $settings.scrollLongIngredients)
 			updateScrollingFeature($elem, $settings);
 
+		//scroll the disclaimer if the height of the disclaimer div is greater than scrollDisclaimerHeightComparison
+		if ($settings.showDisclaimer)
+			updateScrollingFeatureDisclaimer($elem, $settings);
 
 		//this code is for pages with multiple nutrition labels generated by the plugin like the demo page
 		notApplicableHover($elem);
@@ -475,6 +484,20 @@
 	}
 
 
+	function updateScrollingFeatureDisclaimer($elem, $settings){
+		if ($elem.attr('id') !== undefined && $elem.attr('id') !== '')
+			//this code is for pages with multiple nutrition labels generated by the plugin like the demo page
+			$disclaimerParent = $('#'+$elem.attr('id')+' #calcDisclaimerText').parent();
+		else
+			$disclaimerParent = $('#calcDisclaimerText').parent();
+
+		if ($disclaimerParent.innerHeight() > $settings.scrollDisclaimerHeightComparison)
+			$disclaimerParent.addClass('scroll').css({
+				'height' : $settings.scrollDisclaimer+'px'
+			});
+	}
+
+
 	function changeQuantityTextbox($thisTextbox, $originalSettings, nutritionLabel, $elem){
 		var textBoxValue = parseFloat( $thisTextbox.val() );
 
@@ -491,6 +514,10 @@
 		//and the settings showIngredients and scrollLongIngredients are true
 		if ($originalSettings.showIngredients && $originalSettings.scrollLongIngredients)
 			updateScrollingFeature($elem, $originalSettings);
+
+		//scroll the disclaimer if the height of the disclaimer div is greater than scrollDisclaimerHeightComparison
+		if ($settings.showDisclaimer)
+			updateScrollingFeatureDisclaimer($elem, $originalSettings);
 
 		//this code is for pages with multiple nutrition labels generated by the plugin like the demo page
 		notApplicableHover($elem);
@@ -530,6 +557,10 @@
 			//and the settings showIngredients and scrollLongIngredients are true
 		if ($settings.showIngredients && $settings.scrollLongIngredients)
 			updateScrollingFeature($elem, $settings);
+
+		//scroll the disclaimer if the height of the disclaimer div is greater than scrollDisclaimerHeightComparison
+		if ($settings.showDisclaimer)
+			updateScrollingFeatureDisclaimer($elem, $settings);
 
 		//this code is for pages with multiple nutrition labels generated by the plugin like the demo page
 		notApplicableHover($elem);
@@ -1131,7 +1162,7 @@
 
 
 			if ($this.settings.showVitaminA){
-				nutritionLabel += tab1 + '<div class="line">\n';
+				nutritionLabel += tab1 + '<div class="line vitaminA">\n';
 					nutritionLabel += tab2 + '<div class="dv">';
 						nutritionLabel += $this.settings.naVitaminA ?
 							naValue :
@@ -1144,7 +1175,7 @@
 
 
 			if ($this.settings.showVitaminC){
-				nutritionLabel += tab1 + '<div class="line">\n';
+				nutritionLabel += tab1 + '<div class="line vitaminC">\n';
 					nutritionLabel += tab2 + '<div class="dv">';
 						nutritionLabel += $this.settings.naVitaminC ?
 							naValue :
@@ -1157,7 +1188,7 @@
 
 
 			if ($this.settings.showCalcium){
-				nutritionLabel += tab1 + '<div class="line">\n';
+				nutritionLabel += tab1 + '<div class="line calcium">\n';
 					nutritionLabel += tab2 + '<div class="dv">';
 						nutritionLabel += $this.settings.naCalcium ?
 							naValue :
@@ -1170,7 +1201,7 @@
 
 
 			if ($this.settings.showIron){
-				nutritionLabel += tab1 + '<div class="line">\n';
+				nutritionLabel += tab1 + '<div class="line iron">\n';
 					nutritionLabel += tab2 + '<div class="dv">';
 						nutritionLabel += $this.settings.naIron ?
 							naValue :
@@ -1192,6 +1223,15 @@
 							nutritionLabel += tab4 + $this.settings.ingredientList + '\n';
 						nutritionLabel += tab3 + '</div><!-- closing class="ingredientListDiv" -->\n';
 					}
+
+					if ($this.settings.showDisclaimer){
+						nutritionLabel += tab3 + '<br/>';
+						nutritionLabel += tab3 + '<div id="calcDisclaimer">\n';
+							nutritionLabel += tab4 + '<span id="calcDisclaimerText">' + $this.settings.valueDisclaimer + '</span>\n';
+						nutritionLabel += tab3 + '</div>\n';
+						nutritionLabel += tab3 + '<br/>';
+					}
+
 					nutritionLabel += tab2 + '</div><!-- closing class="calorieNote" -->\n';
 
 
