@@ -1,11 +1,12 @@
+
 version 4.0.10 - may 26, 2013
-- added class names to vitamins, calcium and iron
+ - added class names to vitamins, calcium and iron
 
 ------------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------------
 
 version 4.0.9 - may 21, 2013
-- fixed iOS css bugs on serving quantity textbox
+ - fixed iOS css bugs on serving quantity textbox
 
 ------------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------------
